--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
  font-family: -apple-system, blinkMacSystemFont, "Helvetica Neue", "Segoe UI",
-    "Roboto", "Arial", "Hiragino Kaku Gothic ProN", YuGothicM, YuGothic, Meiryo,
-    sans-serif;
+    "Roboto", "Arial", sans-serif;
     box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,16 +10,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-@font-face {
-  font-family: YuGothicM;
-  font-weight: normal;
-  src: local("YuGothic-Medium"), local("Yu Gothic Medium"),
-    local("YuGothic-Regular"); /* Windows8.1ではMediumがないのでRegularを指定 */
-}
-@font-face {
-  font-family: YuGothicM;
-  font-weight: bold;
-  src: local("YoGothic-Bold"), local("Yu Gothic");
 }
